tests/valid/testcase05.c
// valid casting char -> string

int main(void) {
    char x;
    string y;

    x = 'b';
    y = (string) x;
}