tests/semantic_errors/testcase25.c
// invalid casting string -> char

int main(void){
    string x;
    char y;
    y = (char) x;
}